[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/event_chain/data_view/branch/branch.gd" type="Script" id=1]

[node name="branch" type="Polygon2D"]
antialiased = true
script = ExtResource( 1 )

[node name="area2d" type="Area2D" parent="."]

[node name="collision" type="CollisionPolygon2D" parent="area2d"]
[connection signal="mouse_entered" from="area2d" to="." method="_on_area2d_mouse_entered"]
[connection signal="mouse_exited" from="area2d" to="." method="_on_area2d_mouse_exited"]
